pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-152-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/152-html_blocks.md
---
[32m<DIV CLASS="foo">
[0m
[3mMarkdown[0m

[32m</DIV>
[0m
